# OMSapi

./: .pre-commit-config.yaml  pyproject.toml
src/oms/: __init__.py  get_oms_data.py  oms_utils.py
src/omsapi/: get_oms_data.py  oms_utils.py  urls.py
