[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omsapi"
version = "0.0.1"
description = "Tools for the automated selection of reference runs"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/omsapi"]
