[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oms"
version = "0.0.1"
description = "Tools for interphasing with the OMS API"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/oms"]
