[tool.poetry]
name = "omsapi"
description = "Tools for interphasing with the OMS API"
version = "0.0.2"
readme = "README.md"
repository = "https://github.com/roy-cruz/OMSapi"
packages = [{ include = "oms", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "^2.2.2"
ipykernel = { version = "^6.29.4", optional = true }
ipywidgets = { version = "^8.1.2", optional = true }
nbformat = { version = "^5.10.4", optional = true }

[tool.poetry.extras]
nb = [
    "ipykernel",
    "ipywidgets",
    "nbformat",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"